--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
-<p>2e1sub</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>2E1SUB Amateur Radio</title>
+    <!-- Use the Inter font from Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Load Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+        /* Custom scrollbar styles */
+        ::-webkit-scrollbar {
+            width: 8px;
+        }
+        ::-webkit-scrollbar-track {
+            background: #111827;
+        }
+        ::-webkit-scrollbar-thumb {
+            background-color: #4B5563;
+            border-radius: 4px;
+        }
+        ::-webkit-scrollbar-thumb:hover {
+            background-color: #6B7280;
+        }
+    </style>
+</head>
+<body class="bg-gray-900 text-gray-100 min-h-screen flex flex-col antialiased">
+
+    <!-- Main Content - Simple Landing Page -->
+    <main class="flex-grow flex flex-col items-center justify-center text-center p-8 md:p-16">
+        <div class="space-y-6 max-w-2xl mx-auto">
+            <h1 class="text-6xl md:text-8xl font-extrabold text-teal-400 leading-tight tracking-wide animate-pulse">
+                2E1SUB
+            </h1>
+            <p class="text-xl md:text-2xl text-gray-400 font-semibold mt-4">
+                Website Coming Soon
+            </p>
+        </div>
+    </main>
+
+    <!-- Footer -->
+    <footer class="w-full bg-gray-800 p-4 mt-8">
+        <div class="container mx-auto text-center text-gray-400">
+            <p>&copy; 2025 2E1SUB. All rights reserved.</p>
+        </div>
+    </footer>
+</body>
+</html>
