--- a/index.html
+++ b/index.html
@@ -3,91 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2E1SUB - Amateur Radio</title>
+    <title>2E1SUB - Jack Brown</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f0f4f8;
-            color: #334155;
-            line-height: 1.6;
-            margin: 0;
-            padding: 2rem;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .container {
-            max-width: 800px;
-            width: 100%;
-            background-color: #ffffff;
-            border-radius: 1rem;
-            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-            padding: 2rem;
-            box-sizing: border-box;
-        }
-        .title {
-            text-align: center;
-            font-size: 2.5rem;
-            font-weight: 700;
-            color: #1e293b;
-            margin-bottom: 1rem;
-        }
-        .subtitle {
-            text-align: center;
-            font-size: 1.25rem;
-            color: #64748b;
-            margin-bottom: 2rem;
-        }
-        .section-title {
-            font-size: 1.75rem;
-            font-weight: 700;
-            color: #1e293b;
-            border-bottom: 2px solid #cbd5e1;
-            padding-bottom: 0.5rem;
-            margin-top: 2rem;
-            margin-bottom: 1rem;
-        }
-        p {
-            margin-bottom: 1rem;
-            color: #475569;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-            margin-bottom: 1rem;
-        }
-        li {
-            padding: 0.25rem 0;
-        }
-        a {
-            color: #3b82f6;
-            text-decoration: none;
-            font-weight: 600;
-            transition: color 0.3s;
-        }
-        a:hover {
-            color: #2563eb;
-        }
-        hr {
-            border: 0;
-            height: 1px;
-            background-color: #cbd5e1;
-            margin: 2rem 0;
-        }
-        footer {
-            text-align: center;
-            margin-top: 2rem;
-            padding-top: 1rem;
-            border-top: 1px solid #e2e8f0;
-            color: #64748b;
-        }
+body {
+ font-family: sans-serif;
+background-color: #e0e0e0;
+color: #333333;
+margin: 20px;
+}
+.main-content {
+background-color: #ffffff;
+border: 2px solid #a0a0a0;
+padding: 20px;
+border-radius: 10px; 
+}
+h1, h2 {
+            color: #004d99;
+}
+a {
+color: #007bff;
+  }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1 class="title">2E1SUB Amateur Radio Page</h1>
-        <h2 class="subtitle">Hi and thanks for visiting my new blog, There's a little about me and how I got involved in amateur radio. Also some other interesting projects.</h2>
+    <div class="main-content">
+        <center>
+            <h1>2E1SUB Amateur Radio Page</h1>
+        </center>
+        <center>
+            <h2>Hi, I'm Jack Brown, and thanks for visiting my new blog!</h2>
+        </center>
         
         <hr>
 
@@ -98,7 +43,7 @@
         <p>Fast forward to about a year after getting my license in February 2025, I sent an email to the chair of the Verulam club <a href="https://www.qrz.com/db/G7HMV" target="_blank">Matt - G7HMV</a> who encouraged me to join up!</p>
         <p>After joining and fast forward to now, all the members of VARC have been incredibly welcoming to me and encouraged me to progress in the hobby. I passed my <b>Intermediate exam on the 27th of this month</b> and am now the proud holder of the callsign <b>2E1SUB</b>!</p>
         
-        <div class="section-title">Acknowledgements</div>
+        <h3>Acknowledgements</h3>
         <p>I have revised a lot with the help and support of:</p>
         <ul>
             <li><a href="https://g4iyt.uk" target="_blank">Matt, G4IYT</a></li>
@@ -108,7 +53,7 @@
             <li>and everyone else!</li>
         </ul>
 
-        <div class="section-title">Friends</div>
+        <h3>Friends</h3>
         <p>A big thanks to my friends in the hobby:</p>
         <ul>
             <li><a href="nafaneel.uk" target="_blank">Nathan! 2E0NNC!</a></li>
@@ -121,6 +66,5 @@
             <li><a href="https://qrz.com/db/m1cvz" target="_blank">Jeremy M1CVZ</a></li>
         </ul>
     </div>
-    <p>this page was made entirely by AI until i have time to code it properly!</p>
 </body>
 </html>
