--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@ color: #007bff;
         </center>
         <center>
             <h2>Hi, I'm Jack Brown, and thanks for visiting my new blog!</h2>
+            <a href="mailto:jack"</a>
         </center>
         
         <hr>
-
+<p><a href="mailto:jack@2e1sub.com">Email me with any questions!</a></p>
+        <br>
         <p>My first discovery of amateur radio was in February 2024, when I was introduced to Nathan (2E0NNC) from my school. Since we both had an interest in computers and the like, he mentioned he had an amateur radio license and I liked the sound of something like that. What I didn't know was that I actually already had a Radio, the very common <b>Baofeng UV5R</b>... I bought it a few weeks prior for emergency preparedness as many people do, knowing that I can't use it unless there is an emergency.</p>
         <p>Soon after this, Nathan suggested I get my Foundation License. He suggested a course from <a href="https://www.essexham.co.uk/how-to-become-a-ham" target="_blank">Essex Ham</a>, so I took the course and successfully passed my <b>Foundation License</b> on the 14th May 2024, (Age at this time: 12).</p>
         <p>I made my first ever contact about 20 minutes after receiving my official license from Ofcom, on the popular repeater local to my area GB3LT, to <b>Steve M1CYT</b>. Who was very kind and was patient with my mic fright.</p>
